--- a/.bazel/nogo-config.json
+++ b/.bazel/nogo-config.json
@@ -29,6 +29,12 @@
       "/external/": "no need to vet third party code"
     }
   },
+  "errcheck": {
+    "exclude_files": {
+      "/vendor/": "no need to vet third party code",
+      "/external/": "no need to vet third party code"
+    }
+  },
   "gosec": {
     "exclude_files": {
       "/vendor/": "no need to vet third party code",
